--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,4 +24,4 @@ updates:
       interval: "daily"
     ignore:
       - dependency-name: "python"
-      - update-types: ["version-update:semver-major"]
+        update-types: ["version-update:semver-major"]
