--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 discord.py==1.7.3
-psutil==5.9.0
+psutil==5.9.1
 pycodestyle==2.8.0
-chess==1.9.0
+chess==1.9.1
 cairosvg==2.5.2
-chess.com-1.7.8
+chess.com==1.4.1
 requests==2.27.1
-dotenv==0.14.0
+pytz==2022.1
+python-dotenv==0.20.0
